--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -132,129 +132,72 @@ jobs:
         api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
         api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
         
-    - name: Configure Apple Developer Account
+    - name: Create or Update ExportOptions Plist
       run: |
-        echo "🍎 Adding Apple Developer account to Xcode..."
-        
-        # Create the necessary directories
-        mkdir -p ~/Library/Developer/Xcode/UserData/IDEAccounts
-        mkdir -p ~/Library/Preferences
-        
-        # Add Apple ID account to Xcode using App Store Connect API
-        # This tells Xcode about our developer account
-        cat > ~/Library/Developer/Xcode/UserData/IDEAccounts/Accounts.json << EOF
-        {
-          "accounts" : [
-            {
-              "accountID" : "JPXGBUG6ZW",
-              "accountTypeIdentifier" : "DVTPortalAccount",
-              "username" : "${{ secrets.APPLE_ID }}",
-              "teamID" : "JPXGBUG6ZW",
-              "teams" : [
-                {
-                  "teamID" : "JPXGBUG6ZW",
-                  "name" : "Your Team Name"
-                }
-              ]
-            }
-          ]
-        }
+        cd ios
+        # Create automatic signing version for CI/CD
+        cat > ExportOptions-Development-Auto.plist << 'EOF'
+        <?xml version="1.0" encoding="UTF-8"?>
+        <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+        <plist version="1.0">
+        <dict>
+          <key>method</key>
+          <string>development</string>
+          <key>teamID</key>
+          <string>JPXGBUG6ZW</string>
+          <key>uploadBitcode</key>
+          <false/>
+          <key>compileBitcode</key>
+          <false/>
+          <key>uploadSymbols</key>
+          <true/>
+          <key>signingStyle</key>
+          <string>automatic</string>
+          <key>stripSwiftSymbols</key>
+          <true/>
+          <key>destination</key>
+          <string>export</string>
+        </dict>
+        </plist>
         EOF
-        
-        echo "✅ Apple Developer account configured"
-        
-    - name: Debug Provisioning Profiles
-      run: |
-        echo "🔍 Debugging provisioning profiles..."
-        echo "📁 Profile directory contents:"
-        ls -la ~/Library/MobileDevice/Provisioning\ Profiles/ || true
-        
-        echo "🔍 All certificates in keychain:"
-        security find-identity -v -p codesigning || true
-        
-        echo "📱 Checking downloaded profiles..."
-        for profile in ~/Library/MobileDevice/Provisioning\ Profiles/*.mobileprovision; do
-          if [ -f "$profile" ]; then
-            echo "=== Profile: $(basename "$profile") ==="
-            security cms -D -i "$profile" | plutil -p - | head -20
-            echo
-          fi
-        done
-        
-    - name: Get Provisioning Profile UUID
-      run: |
-        echo "📱 Getting provisioning profile UUID..."
-        
-        # Find all development profiles for our bundle ID
-        for profile in ~/Library/MobileDevice/Provisioning\ Profiles/*.mobileprovision; do
-          if [ -f "$profile" ]; then
-            # Extract and check if this profile matches our app
-            PROFILE_DATA=$(security cms -D -i "$profile")
-            BUNDLE_ID=$(echo "$PROFILE_DATA" | plutil -extract "Entitlements.application-identifier" raw -)
-            PROFILE_TYPE=$(echo "$PROFILE_DATA" | plutil -extract "ProvisionedDevices" raw - 2>/dev/null || echo "AppStore")
-            
-            echo "Profile: $(basename "$profile")"
-            echo "Bundle ID: $BUNDLE_ID"
-            echo "Type: $PROFILE_TYPE"
-            
-            if [[ "$BUNDLE_ID" == *"com.youllgetit.app"* ]]; then
-              DEV_PROFILE_UUID=$(basename "$profile" .mobileprovision)
-              PROFILE_NAME=$(echo "$PROFILE_DATA" | plutil -extract "Name" raw -)
-              echo "✅ Found matching profile!"
-              echo "UUID: $DEV_PROFILE_UUID"
-              echo "Name: $PROFILE_NAME"
-              echo "DEV_PROFILE_UUID=$DEV_PROFILE_UUID" >> $GITHUB_ENV
-              break
-            fi
-          fi
-        done
-        
-        if [ -z "$DEV_PROFILE_UUID" ]; then
-          echo "❌ No matching provisioning profile found for com.youllgetit.app"
-          exit 1
-        fi
+        echo "✅ Created ExportOptions-Development-Auto.plist with automatic signing"
         
     - name: Flutter Build
       run: flutter build ios --release --no-codesign
       
-    - name: Configure Code Signing for Runner Only
-      run: |
-        cd ios
-        echo "🔧 Configuring manual code signing for Runner target..."
-        
-        # First, let's see what UUIDs exist in the project
-        echo "📋 Current project build configurations:"
-        grep -A 5 -B 5 "buildSettings" Runner.xcodeproj/project.pbxproj | grep -E "(isa = XCBuildConfiguration|buildSettings|name =)" || true
-        
-        # Set manual code signing ONLY for Runner target configurations
-        /usr/libexec/PlistBuddy -c "Set :objects:97C147061CF9000F007C117D:buildSettings:CODE_SIGN_STYLE Manual" Runner.xcodeproj/project.pbxproj || true
-        /usr/libexec/PlistBuddy -c "Set :objects:97C147071CF9000F007C117D:buildSettings:CODE_SIGN_STYLE Manual" Runner.xcodeproj/project.pbxproj || true
-        /usr/libexec/PlistBuddy -c "Set :objects:249021D4217E4FDB00AE95B9:buildSettings:CODE_SIGN_STYLE Manual" Runner.xcodeproj/project.pbxproj || true
-        
-        # Set code sign identity for Runner
-        /usr/libexec/PlistBuddy -c "Set :objects:97C147061CF9000F007C117D:buildSettings:CODE_SIGN_IDENTITY iPhone Developer" Runner.xcodeproj/project.pbxproj || true
-        /usr/libexec/PlistBuddy -c "Set :objects:97C147071CF9000F007C117D:buildSettings:CODE_SIGN_IDENTITY iPhone Developer" Runner.xcodeproj/project.pbxproj || true
-        /usr/libexec/PlistBuddy -c "Set :objects:249021D4217E4FDB00AE95B9:buildSettings:CODE_SIGN_IDENTITY iPhone Developer" Runner.xcodeproj/project.pbxproj || true
-        
-        # Set provisioning profile for Runner
-        /usr/libexec/PlistBuddy -c "Set :objects:97C147061CF9000F007C117D:buildSettings:PROVISIONING_PROFILE_SPECIFIER $DEV_PROFILE_UUID" Runner.xcodeproj/project.pbxproj || true
-        /usr/libexec/PlistBuddy -c "Set :objects:97C147071CF9000F007C117D:buildSettings:PROVISIONING_PROFILE_SPECIFIER $DEV_PROFILE_UUID" Runner.xcodeproj/project.pbxproj || true
-        /usr/libexec/PlistBuddy -c "Set :objects:249021D4217E4FDB00AE95B9:buildSettings:PROVISIONING_PROFILE_SPECIFIER $DEV_PROFILE_UUID" Runner.xcodeproj/project.pbxproj || true
-        
-        echo "✅ Configured manual code signing for Runner target only"
-        
     - name: Archive Development Build
       run: |
         cd ios
         rm -rf ~/Library/Developer/Xcode/DerivedData/Runner-*
+        
+        # Create a temporary keychain for the build
+        KEYCHAIN_NAME="build-temp.keychain"
+        KEYCHAIN_PASSWORD="temp-password"
+        
+        security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_NAME"
+        security set-keychain-settings -lut 21600 "$KEYCHAIN_NAME"
+        security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_NAME"
+        
+        # Make the temporary keychain the default
+        security default-keychain -s "$KEYCHAIN_NAME"
+        
+        # Add keychain to search list
+        security list-keychains -d user -s "$KEYCHAIN_NAME" $(security list-keychains -d user | sed s/\"//g)
+        
+        # Allow codesign to access the keychain without prompting
+        security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_NAME"
+        
+        # Build without automatic provisioning - we'll use manual signing
         xcodebuild -workspace Runner.xcworkspace \
           -scheme Runner \
           -configuration Release \
           -destination generic/platform=iOS \
           -archivePath $RUNNER_TEMP/Runner-Dev.xcarchive \
           archive \
+          CODE_SIGN_STYLE="Automatic" \
           DEVELOPMENT_TEAM="JPXGBUG6ZW" \
-          -allowProvisioningUpdates
+          PROVISIONING_PROFILE_SPECIFIER="" \
+          CODE_SIGN_IDENTITY="iPhone Developer"
           
     - name: Export Development IPA
       run: |
@@ -262,7 +205,8 @@ jobs:
         xcodebuild -exportArchive \
           -archivePath $RUNNER_TEMP/Runner-Dev.xcarchive \
           -exportPath $RUNNER_TEMP/Development \
-          -exportOptionsPlist ExportOptions-Development.plist
+          -exportOptionsPlist ExportOptions-Development-Auto.plist \
+          -allowProvisioningUpdates
           
     - name: Upload Development Artifact
       uses: actions/upload-artifact@v4
@@ -399,107 +343,77 @@ jobs:
         api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
         api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
         
-    - name: Configure Apple Developer Account
+    - name: Create or Update ExportOptions Plist
       run: |
-        echo "🍎 Adding Apple Developer account to Xcode..."
-        
-        # Create the necessary directories
-        mkdir -p ~/Library/Developer/Xcode/UserData/IDEAccounts
-        mkdir -p ~/Library/Preferences
-        
-        # Add Apple ID account to Xcode using App Store Connect API
-        # This tells Xcode about our developer account
-        cat > ~/Library/Developer/Xcode/UserData/IDEAccounts/Accounts.json << EOF
-        {
-          "accounts" : [
-            {
-              "accountID" : "JPXGBUG6ZW",
-              "accountTypeIdentifier" : "DVTPortalAccount",
-              "username" : "${{ secrets.APPLE_ID }}",
-              "teamID" : "JPXGBUG6ZW",
-              "teams" : [
-                {
-                  "teamID" : "JPXGBUG6ZW",
-                  "name" : "Your Team Name"
-                }
-              ]
-            }
-          ]
-        }
+        cd ios
+        # Create automatic signing version for CI/CD
+        cat > ExportOptions-AppStore-Auto.plist << 'EOF'
+        <?xml version="1.0" encoding="UTF-8"?>
+        <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+        <plist version="1.0">
+        <dict>
+          <key>method</key>
+          <string>app-store</string>
+          <key>teamID</key>
+          <string>JPXGBUG6ZW</string>
+          <key>uploadBitcode</key>
+          <false/>
+          <key>uploadSymbols</key>
+          <true/>
+          <key>signingStyle</key>
+          <string>automatic</string>
+          <key>stripSwiftSymbols</key>
+          <true/>
+          <key>destination</key>
+          <string>upload</string>
+          <key>manageAppVersionAndBuildNumber</key>
+          <false/>
+        </dict>
+        </plist>
         EOF
+        echo "✅ Created ExportOptions-AppStore-Auto.plist with automatic signing"
         
-        echo "✅ Apple Developer account configured"
-        
-    - name: Get Provisioning Profile UUID
+    - name: Setup App Store Connect API Key
       run: |
-        echo "📱 Getting provisioning profile UUID..."
-        
-        # Find all App Store profiles for our bundle ID
-        for profile in ~/Library/MobileDevice/Provisioning\ Profiles/*.mobileprovision; do
-          if [ -f "$profile" ]; then
-            # Extract and check if this profile matches our app
-            PROFILE_DATA=$(security cms -D -i "$profile")
-            BUNDLE_ID=$(echo "$PROFILE_DATA" | plutil -extract "Entitlements.application-identifier" raw -)
-            PROFILE_TYPE=$(echo "$PROFILE_DATA" | plutil -extract "ProvisionedDevices" raw - 2>/dev/null || echo "AppStore")
-            
-            echo "Profile: $(basename "$profile")"
-            echo "Bundle ID: $BUNDLE_ID"
-            echo "Type: $PROFILE_TYPE"
-            
-            if [[ "$BUNDLE_ID" == *"com.youllgetit.app"* ]]; then
-              APPSTORE_PROFILE_UUID=$(basename "$profile" .mobileprovision)
-              PROFILE_NAME=$(echo "$PROFILE_DATA" | plutil -extract "Name" raw -)
-              echo "✅ Found matching profile!"
-              echo "UUID: $APPSTORE_PROFILE_UUID"
-              echo "Name: $APPSTORE_PROFILE_UUID"
-              echo "APPSTORE_PROFILE_UUID=$APPSTORE_PROFILE_UUID" >> $GITHUB_ENV
-              break
-            fi
-          fi
-        done
-        
-        if [ -z "$APPSTORE_PROFILE_UUID" ]; then
-          echo "❌ No matching provisioning profile found for com.youllgetit.app"
-          exit 1
-        fi
+        mkdir -p ~/private_keys
+        echo "${{ secrets.APPSTORE_PRIVATE_KEY }}" | base64 --decode > ~/private_keys/AuthKey_${{ secrets.APPSTORE_KEY_ID }}.p8
         
     - name: Flutter Build
       run: flutter build ios --release --no-codesign
       
-    - name: Configure Code Signing for Runner Only
-      run: |
-        cd ios
-        echo "🔧 Configuring manual code signing for Runner target..."
-        
-        # Set manual code signing ONLY for Runner target configurations
-        /usr/libexec/PlistBuddy -c "Set :objects:97C147061CF9000F007C117D:buildSettings:CODE_SIGN_STYLE Manual" Runner.xcodeproj/project.pbxproj || true
-        /usr/libexec/PlistBuddy -c "Set :objects:97C147071CF9000F007C117D:buildSettings:CODE_SIGN_STYLE Manual" Runner.xcodeproj/project.pbxproj || true
-        /usr/libexec/PlistBuddy -c "Set :objects:249021D4217E4FDB00AE95B9:buildSettings:CODE_SIGN_STYLE Manual" Runner.xcodeproj/project.pbxproj || true
-        
-        # Set code sign identity for Runner (App Store Distribution)
-        /usr/libexec/PlistBuddy -c "Set :objects:97C147061CF9000F007C117D:buildSettings:CODE_SIGN_IDENTITY iPhone Distribution" Runner.xcodeproj/project.pbxproj || true
-        /usr/libexec/PlistBuddy -c "Set :objects:97C147071CF9000F007C117D:buildSettings:CODE_SIGN_IDENTITY iPhone Distribution" Runner.xcodeproj/project.pbxproj || true
-        /usr/libexec/PlistBuddy -c "Set :objects:249021D4217E4FDB00AE95B9:buildSettings:CODE_SIGN_IDENTITY iPhone Distribution" Runner.xcodeproj/project.pbxproj || true
-        
-        # Set provisioning profile for Runner
-        /usr/libexec/PlistBuddy -c "Set :objects:97C147061CF9000F007C117D:buildSettings:PROVISIONING_PROFILE_SPECIFIER $APPSTORE_PROFILE_UUID" Runner.xcodeproj/project.pbxproj || true
-        /usr/libexec/PlistBuddy -c "Set :objects:97C147071CF9000F007C117D:buildSettings:PROVISIONING_PROFILE_SPECIFIER $APPSTORE_PROFILE_UUID" Runner.xcodeproj/project.pbxproj || true
-        /usr/libexec/PlistBuddy -c "Set :objects:249021D4217E4FDB00AE95B9:buildSettings:PROVISIONING_PROFILE_SPECIFIER $APPSTORE_PROFILE_UUID" Runner.xcodeproj/project.pbxproj || true
-        
-        echo "✅ Configured manual code signing for Runner target only"
-        
     - name: Archive App Store Build
       run: |
         cd ios
         rm -rf ~/Library/Developer/Xcode/DerivedData/Runner-*
+        
+        # Create a temporary keychain for the build
+        KEYCHAIN_NAME="build-temp.keychain"
+        KEYCHAIN_PASSWORD="temp-password"
+        
+        security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_NAME"
+        security set-keychain-settings -lut 21600 "$KEYCHAIN_NAME"
+        security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_NAME"
+        
+        # Make the temporary keychain the default
+        security default-keychain -s "$KEYCHAIN_NAME"
+        
+        # Add keychain to search list
+        security list-keychains -d user -s "$KEYCHAIN_NAME" $(security list-keychains -d user | sed s/\"//g)
+        
+        # Allow codesign to access the keychain without prompting
+        security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_NAME"
+        
+        # Build with automatic provisioning
         xcodebuild -workspace Runner.xcworkspace \
           -scheme Runner \
           -configuration Release \
           -destination generic/platform=iOS \
           -archivePath $RUNNER_TEMP/Runner-AppStore.xcarchive \
           archive \
+          CODE_SIGN_STYLE="Automatic" \
           DEVELOPMENT_TEAM="JPXGBUG6ZW" \
-          -allowProvisioningUpdates
+          PROVISIONING_PROFILE_SPECIFIER="" \
+          CODE_SIGN_IDENTITY="iPhone Distribution"
           
     - name: Export App Store IPA
       run: |
@@ -507,7 +421,8 @@ jobs:
         xcodebuild -exportArchive \
           -archivePath $RUNNER_TEMP/Runner-AppStore.xcarchive \
           -exportPath $RUNNER_TEMP/AppStore \
-          -exportOptionsPlist ExportOptions-AppStore.plist
+          -exportOptionsPlist ExportOptions-AppStore-Auto.plist \
+          -allowProvisioningUpdates
           
     - name: Upload to App Store Connect
       run: |
@@ -515,8 +430,8 @@ jobs:
         xcrun altool --upload-app \
           --type ios \
           --file "$IPA_FILE" \
-          --username "${{ secrets.APPLE_ID }}" \
-          --password "${{ secrets.APPLE_APP_PASSWORD }}" \
+          --apiKey "${{ secrets.APPSTORE_KEY_ID }}" \
+          --apiIssuer "${{ secrets.APPSTORE_ISSUER_ID }}" \
           --verbose
           
     - name: Upload App Store Artifact
