--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -127,7 +127,7 @@ jobs:
       run: |
         # Create variables
         KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-        KEYCHAIN_PASSWORD=$(openssl rand -base64 32)
+        KEYCHAIN_PASSWORD=$(openssl rand -hex 32)
         
         # Create temporary keychain
         security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
@@ -356,7 +356,7 @@ jobs:
       run: |
         # Create variables
         KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-        KEYCHAIN_PASSWORD=$(openssl rand -base64 32)
+        KEYCHAIN_PASSWORD=$(openssl rand -hex 32)
         
         # Create temporary keychain
         security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
