--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -127,28 +127,32 @@ jobs:
       run: |
         # Create variables
         KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-        KEYCHAIN_PASSWORD=$(openssl rand -hex 32)
+        KEYCHAIN_PASSWORD="temporary-password-12345"
         
         # Create temporary keychain
-        security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-        security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
-        security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+        security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+        security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
+        security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
         
         # Add to keychain search list
-        security list-keychains -d user -s $KEYCHAIN_PATH $(security list-keychains -d user | sed s/\"//g)
-        security default-keychain -s $KEYCHAIN_PATH
+        EXISTING_KEYCHAINS=$(security list-keychains -d user | sed 's/"//g')
+        security list-keychains -d user -s "$KEYCHAIN_PATH" $EXISTING_KEYCHAINS
+        security default-keychain -s "$KEYCHAIN_PATH"
         
         # Import certificate
         echo "${{ secrets.DEV_CERTIFICATES_P12 }}" | base64 --decode > certificate.p12
-        security import certificate.p12 -k $KEYCHAIN_PATH -P "${{ secrets.DEV_CERTIFICATES_P12_PASSWORD }}" -T /usr/bin/codesign -T /usr/bin/security
+        security import certificate.p12 -k "$KEYCHAIN_PATH" -P "${{ secrets.DEV_CERTIFICATES_P12_PASSWORD }}" -T /usr/bin/codesign -T /usr/bin/security
         rm certificate.p12
         
         # Allow codesign to access keychain without password prompt
-        security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+        security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
         
         # Verify the certificate was imported
         echo "🔍 Checking imported certificates:"
-        security find-identity -v -p codesigning $KEYCHAIN_PATH
+        security find-identity -v -p codesigning "$KEYCHAIN_PATH"
+        
+        # Export for use in build step
+        echo "KEYCHAIN_PATH=$KEYCHAIN_PATH" >> $GITHUB_ENV
         
     - name: Download Development Provisioning Profile
       uses: Apple-Actions/download-provisioning-profiles@v3
@@ -198,11 +202,7 @@ jobs:
         rm -rf ~/Library/Developer/Xcode/DerivedData/Runner-*
         
         # Use the keychain we created earlier
-        KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-        
-        # Ensure keychain is unlocked and default
         security default-keychain -s $KEYCHAIN_PATH
-        security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH 2>/dev/null || true
         
         # Build with automatic provisioning
         xcodebuild -workspace Runner.xcworkspace \
@@ -356,28 +356,32 @@ jobs:
       run: |
         # Create variables
         KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-        KEYCHAIN_PASSWORD=$(openssl rand -hex 32)
+        KEYCHAIN_PASSWORD="temporary-password-12345"
         
         # Create temporary keychain
-        security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-        security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
-        security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+        security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+        security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
+        security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
         
         # Add to keychain search list
-        security list-keychains -d user -s $KEYCHAIN_PATH $(security list-keychains -d user | sed s/\"//g)
-        security default-keychain -s $KEYCHAIN_PATH
+        EXISTING_KEYCHAINS=$(security list-keychains -d user | sed 's/"//g')
+        security list-keychains -d user -s "$KEYCHAIN_PATH" $EXISTING_KEYCHAINS
+        security default-keychain -s "$KEYCHAIN_PATH"
         
         # Import certificate
         echo "${{ secrets.DIST_CERTIFICATES_P12 }}" | base64 --decode > certificate.p12
-        security import certificate.p12 -k $KEYCHAIN_PATH -P "${{ secrets.DIST_CERTIFICATES_P12_PASSWORD }}" -T /usr/bin/codesign -T /usr/bin/security
+        security import certificate.p12 -k "$KEYCHAIN_PATH" -P "${{ secrets.DIST_CERTIFICATES_P12_PASSWORD }}" -T /usr/bin/codesign -T /usr/bin/security
         rm certificate.p12
         
         # Allow codesign to access keychain without password prompt
-        security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+        security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
         
         # Verify the certificate was imported
         echo "🔍 Checking imported certificates:"
-        security find-identity -v -p codesigning $KEYCHAIN_PATH
+        security find-identity -v -p codesigning "$KEYCHAIN_PATH"
+        
+        # Export for use in build step
+        echo "KEYCHAIN_PATH=$KEYCHAIN_PATH" >> $GITHUB_ENV
         
     - name: Download App Store Provisioning Profile
       uses: Apple-Actions/download-provisioning-profiles@v3
