--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -123,36 +123,33 @@ jobs:
         p12-file-base64: ${{ secrets.DEV_CERTIFICATES_P12 }}
         p12-password: ${{ secrets.DEV_CERTIFICATES_P12_PASSWORD }}
         
-    - name: Setup Keychain
+    - name: Setup keychain
       run: |
-        # Create variables
         KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
         KEYCHAIN_PASSWORD="temporary-password-12345"
-        
-        # Create temporary keychain
+
         security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
         security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
         security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
-        
-        # Add to keychain search list
+
         EXISTING_KEYCHAINS=$(security list-keychains -d user | sed 's/"//g')
         security list-keychains -d user -s "$KEYCHAIN_PATH" $EXISTING_KEYCHAINS
         security default-keychain -s "$KEYCHAIN_PATH"
-        
-        # Import certificate
-        echo "${{ secrets.DEV_CERTIFICATES_P12 }}" | base64 --decode > certificate.p12
-        security import certificate.p12 -k "$KEYCHAIN_PATH" -P "${{ secrets.DEV_CERTIFICATES_P12_PASSWORD }}" -T /usr/bin/codesign -T /usr/bin/security
+
+        echo "${DEV_CERTIFICATES_P12}" | base64 --decode > certificate.p12
+        security import certificate.p12 -k "$KEYCHAIN_PATH" -P "${DEV_CERTIFICATES_P12_PASSWORD}" -T /usr/bin/codesign -T /usr/bin/security
         rm certificate.p12
-        
-        # Allow codesign to access keychain without password prompt
+
         security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
-        
-        # Verify the certificate was imported
+
         echo "🔍 Checking imported certificates:"
         security find-identity -v -p codesigning "$KEYCHAIN_PATH"
-        
-        # Export for use in build step
+
         echo "KEYCHAIN_PATH=$KEYCHAIN_PATH" >> $GITHUB_ENV
+      env:
+        DEV_CERTIFICATES_P12: ${{ secrets.DEV_CERTIFICATES_P12 }}
+        DEV_CERTIFICATES_P12_PASSWORD: ${{ secrets.DEV_CERTIFICATES_P12_PASSWORD }}
+
         
     - name: Download Development Provisioning Profile
       uses: Apple-Actions/download-provisioning-profiles@v3
