--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -116,69 +116,66 @@ jobs:
         else
           echo "Using cached pods"
         fi
+
+    - name: Setup Keychain
+      run: |
+        KEYCHAIN=$HOME/Library/Keychains/build.keychain
+        KEYCHAIN_PASSWORD=github-actions
+
+        security create-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN
+        security default-keychain -s $KEYCHAIN
+        security unlock-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN
+        security set-keychain-settings -t 3600 -u $KEYCHAIN
+        security list-keychains -s $KEYCHAIN $(security list-keychains -d user | tr -d '"')
         
     - name: Import Development Certificates
-      uses: Apple-Actions/import-codesign-certs@v2
-      with:
-        p12-file-base64: ${{ secrets.DEV_CERTIFICATES_P12 }}
-        p12-password: ${{ secrets.DEV_CERTIFICATES_P12_PASSWORD }}
-        
-    - name: Create or Update ExportOptions Plist
+      env:
+          KEYCHAIN_PATH: $HOME/Library/Keychains/build.keychain
+          P12_PASSWORD: ${{ secrets.DEV_CERTIFICATES_P12_PASSWORD }}
+          DEV_CERT_BASE64: ${{ secrets.DEV_CERTIFICATES_P12 }}
       run: |
-        cd ios
-        # Create automatic signing version for CI/CD
-        cat > ExportOptions-Development-Auto.plist << 'EOF'
-        <?xml version="1.0" encoding="UTF-8"?>
-        <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-        <plist version="1.0">
-        <dict>
-          <key>method</key>
-          <string>development</string>
-          <key>teamID</key>
-          <string>JPXGBUG6ZW</string>
-          <key>uploadBitcode</key>
-          <false/>
-          <key>compileBitcode</key>
-          <false/>
-          <key>uploadSymbols</key>
-          <true/>
-          <key>signingStyle</key>
-          <string>automatic</string>
-          <key>stripSwiftSymbols</key>
-          <true/>
-          <key>destination</key>
-          <string>export</string>
-        </dict>
-        </plist>
-        EOF
-        echo "✅ Created ExportOptions-Development-Auto.plist with automatic signing"
+          echo "$DEV_CERT_BASE64" | base64 --decode > cert.p12
+          security import cert.p12 -k "$KEYCHAIN_PATH" -P "$P12_PASSWORD" -T /usr/bin/codesign
+
+    - name: Install Development Provisioning Profile
+      env:
+       DEV_PROVISIONING_PROFILE_BASE64: ${{ secrets.DEV_PROVISIONING_PROFILE_BASE64 }}
+      run: |
+        mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles/
+        echo "$DEV_PROVISIONING_PROFILE_BASE64" | base64 --decode > ~/Library/MobileDevice/Provisioning\ Profiles/33cccf2f-fb56-4d66-bc00-3e1230f9340b.mobileprovision
         
     - name: Flutter Build
       run: flutter build ios --release --no-codesign
       
     - name: Archive Development Build
+      env:
+        KEYCHAIN_PATH: $HOME/Library/Keychains/build.keychain
       run: |
         cd ios
         rm -rf ~/Library/Developer/Xcode/DerivedData/Runner-*
-        
-        # Build with automatic provisioning
+
+        # Set default keychain
+        security default-keychain -s "$KEYCHAIN_PATH"
+        security unlock-keychain -p github-actions "$KEYCHAIN_PATH"
+
         xcodebuild -workspace Runner.xcworkspace \
           -scheme Runner \
           -configuration Release \
           -destination generic/platform=iOS \
-          -archivePath $RUNNER_TEMP/Runner-Dev.xcarchive \
+          -archivePath "$RUNNER_TEMP/Runner-Dev.xcarchive" \
           archive \
-          -allowProvisioningUpdates \
-          CODE_SIGN_STYLE="Automatic" \
+          CODE_SIGN_STYLE="Manual" \
           DEVELOPMENT_TEAM="JPXGBUG6ZW" \
-          
+          PROVISIONING_PROFILE_SPECIFIER="33cccf2f-fb56-4d66-bc00-3e1230f9340b" \
+          CODE_SIGN_IDENTITY="iPhone Developer"
+
     - name: Export Development IPA
       run: |
         cd ios
         xcodebuild -exportArchive \
           -archivePath $RUNNER_TEMP/Runner-Dev.xcarchive \
           -exportPath $RUNNER_TEMP/Development \
-          -exportOptionsPlist ExportOptions-Development-Auto.plist \
+          -exportOptionsPlist ExportOptions-Development.plist \
           -allowProvisioningUpdates
           
     - name: Upload Development Artifact
