--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -130,10 +130,10 @@ jobs:
         
     - name: Import Development Certificates
       env:
-          KEYCHAIN_PATH: $HOME/Library/Keychains/build.keychain
           P12_PASSWORD: ${{ secrets.DEV_CERTIFICATES_P12_PASSWORD }}
           DEV_CERT_BASE64: ${{ secrets.DEV_CERTIFICATES_P12 }}
       run: |
+          KEYCHAIN_PATH="$HOME/Library/Keychains/build.keychain"
           echo "$DEV_CERT_BASE64" | base64 --decode > cert.p12
           security import cert.p12 -k "$KEYCHAIN_PATH" -P "$P12_PASSWORD" -T /usr/bin/codesign
 
@@ -148,11 +148,11 @@ jobs:
       run: flutter build ios --release --no-codesign
       
     - name: Archive Development Build
-      env:
-        KEYCHAIN_PATH: $HOME/Library/Keychains/build.keychain
       run: |
         cd ios
         rm -rf ~/Library/Developer/Xcode/DerivedData/Runner-*
+
+        KEYCHAIN_PATH="$HOME/Library/Keychains/build.keychain"
 
         # Set default keychain
         security default-keychain -s "$KEYCHAIN_PATH"
