Changed runner signing

--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -164,9 +164,10 @@ jobs:
           -destination generic/platform=iOS \
           -archivePath "$RUNNER_TEMP/Runner-Dev.xcarchive" \
           archive \
-          CODE_SIGN_STYLE="Manual" \
-          DEVELOPMENT_TEAM="JPXGBUG6ZW" \
-          CODE_SIGN_IDENTITY="iPhone Developer"
+          "Runner:CODE_SIGN_STYLE=Manual" \
+          "Runner:DEVELOPMENT_TEAM=JPXGBUG6ZW" \
+          "Runner:CODE_SIGN_IDENTITY=iPhone Developer" \
+          "Runner:PROVISIONING_PROFILE=33cccf2f-fb56-4d66-bc00-3e1230f9340b"
 
     - name: Export Development IPA
       run: |
