--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -141,10 +141,10 @@ jobs:
       env:
        DEV_PROVISIONING_PROFILE_BASE64: ${{ secrets.DEV_PROVISIONING_PROFILE_BASE64 }}
       run: |
-        mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles/
+        mkdir -p "/Users/runner/Library/Developer/Xcode/UserData/Provisioning Profiles"
         echo "$DEV_PROVISIONING_PROFILE_BASE64" | base64 --decode > ~/Library/Developer/Xcode/UserData/Provisioning\ Profiles/33cccf2f-fb56-4d66-bc00-3e1230f9340b.mobileprovision
         ls -l ~/Library/Developer/Xcode/UserData/Provisioning\ Profiles/
-        
+
     - name: Flutter Build
       run: flutter build ios --release --no-codesign
       
