--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -141,9 +141,13 @@ jobs:
       env:
        DEV_PROVISIONING_PROFILE_BASE64: ${{ secrets.DEV_PROVISIONING_PROFILE_BASE64 }}
       run: |
-        mkdir -p "/Users/runner/Library/Developer/Xcode/UserData/Provisioning Profiles"
-        echo "$DEV_PROVISIONING_PROFILE_BASE64" | base64 --decode > ~/Library/Developer/Xcode/UserData/Provisioning\ Profiles/33cccf2f-fb56-4d66-bc00-3e1230f9340b.mobileprovision
-        ls -l ~/Library/Developer/Xcode/UserData/Provisioning\ Profiles/
+        mkdir -p "$HOME/Library/Developer/Xcode/UserData/Provisioning Profiles"
+        mkdir -p "$HOME/Library/MobileDevice/Provisioning Profiles"
+
+        echo "$DEV_PROVISIONING_PROFILE_BASE64" | base64 --decode > "$HOME/Library/MobileDevice/Provisioning Profiles/33cccf2f-fb56-4d66-bc00-3e1230f9340b.mobileprovision"
+        cp "$HOME/Library/MobileDevice/Provisioning Profiles/33cccf2f-fb56-4d66-bc00-3e1230f9340b.mobileprovision" "$HOME/Library/Developer/Xcode/UserData/Provisioning Profiles/33cccf2f-fb56-4d66-bc00-3e1230f9340b.mobileprovision"
+        
+        ls -l ~/Library/Developer/Xcode/UserData/Provisioning\ Profiles/  
 
     - name: Flutter Build
       run: flutter build ios --release --no-codesign
@@ -158,6 +162,7 @@ jobs:
         # Set default keychain
         security default-keychain -s "$KEYCHAIN_PATH"
         security unlock-keychain -p github-actions "$KEYCHAIN_PATH"
+        security find-identity -p codesigning -v "$HOME/Library/Keychains/build.keychain"
 
         xcodebuild -workspace Runner.xcworkspace \
           -scheme Runner \
@@ -167,9 +172,8 @@ jobs:
           archive \
           "Runner:CODE_SIGN_STYLE=Manual" \
           "Runner:DEVELOPMENT_TEAM=JPXGBUG6ZW" \
-          "Runner:CODE_SIGN_IDENTITY=iPhone Developer" \
-          "Runner:PROVISIONING_PROFILE_SPECIFIER=You'll Get It - Development" \
-          OTHER_CODE_SIGN_FLAGS="-v"
+          "Runner:CODE_SIGN_IDENTITY=iPhone Developer: ANDREI SEBASTIAN DUȚĂ (JPXGBUG6ZW)" \
+          "Runner:PROVISIONING_PROFILE=33cccf2f-fb56-4d66-bc00-3e1230f9340b
 
     - name: Export Development IPA
       run: |
@@ -178,7 +182,6 @@ jobs:
           -archivePath $RUNNER_TEMP/Runner-Dev.xcarchive \
           -exportPath $RUNNER_TEMP/Development \
           -exportOptionsPlist ExportOptions-Development.plist \
-          -allowProvisioningUpdates
           
     - name: Upload Development Artifact
       uses: actions/upload-artifact@v4
