--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -162,7 +162,6 @@ jobs:
         # Set default keychain
         security default-keychain -s "$KEYCHAIN_PATH"
         security unlock-keychain -p github-actions "$KEYCHAIN_PATH"
-        security find-identity -p codesigning -v "$HOME/Library/Keychains/build.keychain"
 
         xcodebuild -workspace Runner.xcworkspace \
           -scheme Runner \
@@ -172,7 +171,7 @@ jobs:
           archive \
           "Runner:CODE_SIGN_STYLE=Manual" \
           "Runner:DEVELOPMENT_TEAM=JPXGBUG6ZW" \
-          "Runner:CODE_SIGN_IDENTITY=iPhone Developer: ANDREI SEBASTIAN DUȚĂ (JPXGBUG6ZW)" \
+          "Runner:CODE_SIGN_IDENTITY=iPhone Developer: ANDREI SEBASTIAN DUȚĂ (9QD83S28R6)" \
           "Runner:PROVISIONING_PROFILE=33cccf2f-fb56-4d66-bc00-3e1230f9340b
 
     - name: Export Development IPA
