--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -185,11 +185,9 @@ jobs:
           -configuration Release \
           -destination generic/platform=iOS \
           -archivePath "$RUNNER_TEMP/Runner-Dev.xcarchive" \
+          CODE_SIGN_STYLE="Automatic" \
+          DEVELOPMENT_TEAM="JPXGBUG6ZW" \
           archive \
-          "Runner:CODE_SIGN_STYLE=Manual" \
-          "Runner:DEVELOPMENT_TEAM=JPXGBUG6ZW" \
-          "Runner:PROVISIONING_PROFILE=02453868-11d4-4316-93ad-8d1e2ea59221" \
-          "Runner:CODE_SIGN_IDENTITY=iPhone Developer: ANDREI SEBASTIAN DUȚĂ (9QD83S28R6)"
 
     - name: Export Development IPA
       run: |
