Trying to remove no code sign for flutter build

--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -169,7 +169,8 @@ jobs:
         ls -la ~/Library/MobileDevice/Provisioning\ Profiles/
 
     - name: Flutter Build
-      run: flutter build ios --release --no-codesign
+      run: flutter build ios --release \
+            --export-options-plist ExportOptions-Development.plist \
       
     - name: Archive Development Build
       run: |
