--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -111,65 +111,7 @@ jobs:
     - name: Install CocoaPods
       run: |
         cd ios
-        if [ ! -f Podfile.lock ] || [ pubspec.lock -nt Podfile.lock ]; then
-          pod install --repo-update
-        else
-          echo "Using cached pods"
-        fi
-
-    # - name: Setup Keychain and Import Certificates
-    #   env:
-    #     BUILD_CERTIFICATE_BASE64: ${{ secrets.DEV_CERTIFICATES_P12 }}
-    #     P12_PASSWORD: ${{ secrets.DEV_CERTIFICATES_P12_PASSWORD }}
-    #     KEYCHAIN_PASSWORD: github-actions
-    #   run: |
-    #     # Create variables
-    #     CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
-    #     KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-
-    #     # Import certificate from secrets
-    #     echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
-
-    #     # Create temporary keychain
-    #     security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-    #     security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
-    #     security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-
-    #     # Import certificate to keychain (with proper flags)
-    #     security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
-        
-    #     # KEY FIX: Allow codesign access without password prompt
-    #     security set-key-partition-list -S apple-tool:,apple: -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-        
-    #     # Set keychain search path
-    #     security list-keychain -d user -s $KEYCHAIN_PATH
-
-    #     # Store keychain path for later steps
-    #     echo "KEYCHAIN_PATH=$KEYCHAIN_PATH" >> $GITHUB_ENV
-        
-    #     # Verify certificate imported
-    #     echo "=== Imported certificates ==="
-    #     security find-identity -v -p codesigning $KEYCHAIN_PATH
-
-    # - name: Install Provisioning Profile
-    #   env:
-    #     BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.DEV_PROVISIONING_PROFILE_BASE64 }}
-    #   run: |
-    #     # Create variables
-    #     PP_PATH=$RUNNER_TEMP/02453868-11d4-4316-93ad-8d1e2ea59221.mobileprovision
-
-    #     # Import provisioning profile from secrets
-    #     echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode -o $PP_PATH
-
-    #     # Apply provisioning profile
-    #     mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-    #     cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
-        
-    #     echo "=== Installed provisioning profiles ==="
-    #     ls -la ~/Library/MobileDevice/Provisioning\ Profiles/
-
-    # - name: Flutter Build
-    #   run: flutter build ios --no-codesign --debug
+        pod install --repo-update
 
     - name: Setup App Store Connect API Key
       env:
@@ -199,7 +141,7 @@ jobs:
           -authenticationKeyIssuerID $ISSUER_ID \
           archive \
           CODE_SIGN_STYLE=Automatic \
-          Runner:DEVELOPMENT_TEAM=JPXGBUG6ZW
+          DEVELOPMENT_TEAM=JPXGBUG6ZW
 
     - name: Export Development IPA
       run: |
@@ -207,7 +149,7 @@ jobs:
         xcodebuild -exportArchive \
           -archivePath $RUNNER_TEMP/Runner-Dev.xcarchive \
           -exportPath $RUNNER_TEMP/Development \
-          -exportOptionsPlist ExportOptions-Development.plist \
+          -exportOptionsPlist ExportOptions-AppStore.plist \
           
     - name: Upload Development Artifact
       uses: actions/upload-artifact@v4
